Thymeleaf fragments, Decoupled Template Logic and internationalization added.

--- a/web/src/main/resources/templates/fragments/footer.html
+++ b/web/src/main/resources/templates/fragments/footer.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 <footer id="footerId">
-    <p>Created by the Learn Programming Academy</p>
+    <p id="created-by">The Learn Programming academy</p>
 </footer>
 </html>
