--- a/web/src/main/resources/templates/game-over.html
+++ b/web/src/main/resources/templates/game-over.html
@@ -6,8 +6,8 @@
 </head>
 <body>
     <div align="center">
-        <h1>Guess the Number Game</h1>
-        <h2>Game Over</h2>
+        <h1 id="game-title">Guess the Number Game</h1>
+        <h2 id="game-over">Game Over</h2>
         <h3 id="result-message">
             Result Message Content
         </h3>
